# sa-nom-ai-governance-suite

./: .dockerignore  .env.production.example  .gitignore  .pre-commit-config.yaml  BACKLOG_SEEDS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DISCOVERY_DEMO.md  Dockerfile  FAQ.md  FEATURE_MATRIX.md  GITHUB_OPERATIONS_PLAYBOOK.md  GUIDED_EVALUATION.md  ISSUE_DRAFTS_v0.1.1.md  KUBERNETES.md  NOTICE  ONE_PAGER.md  ONE_PAGER_TH.md  OPEN_SOURCE_RELEASE_CHECKLIST.md  PRIVATE_SERVER_DEPLOYMENT.md  PROVIDER_SETUP.md  PUBLIC_UPLOAD_RUNBOOK.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  SALES_INTAKE_TEMPLATE.md  SECURITY.md  SECURITY_AUDIT_CHECKLIST.md  SUPPORT.md  TRADEMARKS.md  TROUBLESHOOTING.md  access_control.py  access_profile_config.py  access_profile_hash.py  access_profile_rotate.py  api_engine.py  api_schemas.py  audit_integrity.py  audit_logger.py  (+71 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  security_exception.md  security_follow_up.md
.github/workflows/: ci.yml
_runtime/: README.md
_support/: README.md
_support/tests/: GOV.ptn  README.md  role_private_studio_examples.json  role_private_studio_templates.json  test_access_control.py  test_action_runtime.py  test_api_engine_confidence.py  test_audit_integrity.py  test_auditor_evidence_pack.py  test_bootstrap_access_profiles.py  test_bundled_resources.py  test_compliance_registry.py  test_coordination.py  test_cultural_alignment_evaluator.py  test_dashboard_operator_surface.py  test_dashboard_server.py  test_decision_flow.py  test_deployment_profile.py  test_deployment_recovery_validation.py  test_document_runtime.py  test_enterprise_runtime_coverage_script.py  test_enterprise_validation_suite.py  test_ethics_guard.py  (+46 more)
docs/: ACCOUNTING_CLOSE_EXCEPTION_ROLE_PACK.md  BACKUP_AND_RESTORE_VALIDATION.md  BANKING_TREASURY_CONTROL_ROLE_PACK.md  COMMERCIAL_BOUNDARY.md  COMMERCIAL_DISCOVERY_CHECKLIST.md  COMMERCIAL_LICENSE.md  COMMERCIAL_OFFER_PACKS.md  COMMERCIAL_ONE_PAGER.md  COMPLIANCE_KNOWLEDGE_BASELINE.md  COMPLIANCE_RESPONSE_TEMPLATES.md  COMPLIANCE_SKILL_LAYER_CONTRACT.md  CONTROL_ROOM_INFORMATION_ARCHITECTURE.md  CUSTOMER_PLATFORM_RESPONSIBILITY_MATRIX.md  DELIVERY_READINESS_ROLE_PACK.md  DELIVERY_READINESS_SCENARIO.md  DEMO_CHECKLIST.md  DEMO_CHECKLIST_TH.md  DEPENDENCY_REVIEW_WORKFLOW.md  DEPLOYMENT.md  DISCOVERY_CALL_SCRIPT.md  DISCOVERY_DEMO.md  DISPATCH_V1_CONTRACT.md  DOCUMENT_GOVERNANCE_ROLE_PACK.md  ENTERPRISE_FUNCTION_MAP.md  EXTERNAL_AUDIT_RESPONSE_ROLE_PACK.md  EXTERNAL_AUDIT_RESPONSE_SCENARIO.md  FAQ.md  FEATURE_MATRIX.md  FINANCE_BUDGET_VARIANCE_ROLE_PACK.md  FINANCE_BUDGET_VARIANCE_SCENARIO.md  FOUNDER_OUTREACH_SHORT.md  GITHUB_OPERATIONS_PLAYBOOK.md  GLOBAL_HARMONY_CONSTITUTION_TEMPLATES.md  GLOBAL_HARMONY_EVALUATION_BASELINE.md  GLOBAL_HARMONY_RUNTIME_STATE_BASELINE.md  GOVERNED_AUTHORITY_DECISION_ENGINE.md  GOVERNED_DOCUMENT_AUTHORITY_ROUTING.md  GOVERNED_DOCUMENT_CENTER.md  GOVERNED_DOCUMENT_CLASSES.md  GOVERNED_DOCUMENT_HUMAN_ASK_REPORTING.md  (+139 more)
examples/: .env.claude.example  .env.ollama.example  .env.openai.example  README.md  access_profiles.example.json  accounting_close_exception_role_pack.example.json  banking_treasury_control_role_pack.example.json  delivery_readiness_role_pack.example.json  delivery_readiness_scenario.example.json  dispatch_v1_claude.example.json  dispatch_v1_gemini.example.json  dispatch_v1_openai.example.json  document_governance_role_pack.example.json  external_audit_response_role_pack.example.json  external_audit_response_scenario.example.json  finance_budget_variance_role_pack.example.json  finance_budget_variance_scenario.example.json  generated_access_tokens.example.json  guided_smoke_test.example.json  helm-values.production.example.yaml  hr_policy_role_pack.example.json  hr_policy_scenario.example.json  legal_review_role_pack.example.json  legal_review_scenario.example.json  new_model_launch_readiness_role_pack.example.json  new_model_launch_readiness_scenario.example.json  owner_registration.example.json  private_rule_position.example.json  production_line_exception_role_pack.example.json  production_line_exception_scenario.example.json  provider_demo_flow.ollama.example.json  purchasing_supplier_risk_role_pack.example.json  purchasing_supplier_risk_scenario.example.json  quality_audit_readiness_role_pack.example.json  quality_audit_readiness_scenario.example.json  regulator_response_role_pack.example.json  regulator_response_scenario.example.json  role_private_studio.example.json  runtime_startup_smoke.example.json  trusted_registry_manifest.example.json  (+1 more)
k8s/: configmap.example.yaml  deployment.yaml  namespace.yaml  pvc.yaml  secret.example.yaml  service.yaml
scripts/: _bootstrap.py  api_engine.py  audit_reseal.py  bootstrap_access_profiles.py  check_core_coverage.py  check_enterprise_runtime_coverage.py  check_runtime_governance_coverage.py  dashboard_server.py  guided_smoke_test.py  main.py  nontechnical_demo_path.py  ollama_demo_environment.py  private_server_smoke_test.py  provider_demo_flow.py  provider_smoke_test.py  pt_oss_advisory_report.py  public_release_preflight.py  quick_start_path.py  register_owner.py  run_private_server.py  runtime_backup.py  runtime_performance_baseline.py  trusted_registry_refresh.py  usability_proof_bundle.py
(+189 files in other folders)
