[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sa-nom-ai-governance-suite"
version = "0.1.1"
description = "Open-core governance and orchestration toolkit for structured AI operations on private infrastructure."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
  { name = "SA-NOM AI", email = "sanomaiarch@gmail.com" },
]
keywords = ["ai-governance", "self-hosted", "audit", "compliance", "workflow-governance"]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["_support/tests"]
