[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sa-nom-ai-governance-suite"
version = "0.1.10.dev0"
description = "Open-core governance and orchestration toolkit for structured AI operations on private infrastructure."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
  { name = "SA-NOM AI", email = "sanomaiarch@gmail.com" },
]
keywords = ["ai-governance", "self-hosted", "audit", "compliance", "workflow-governance"]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sanom-ai/sa-nom-ai-governance-suite"
Repository = "https://github.com/sanom-ai/sa-nom-ai-governance-suite"
Documentation = "https://github.com/sanom-ai/sa-nom-ai-governance-suite/tree/main/docs"
Releases = "https://github.com/sanom-ai/sa-nom-ai-governance-suite/releases"
Issues = "https://github.com/sanom-ai/sa-nom-ai-governance-suite/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11.0",
  "mypy>=1.19.0",
]

[tool.pytest.ini_options]
testpaths = ["_support/tests"]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [
  "_runtime",
  "_review",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.14"
follow_imports = "silent"
check_untyped_defs = true
warn_unused_ignores = true
files = [
  "sa_nom_governance/guards/bootstrap_access_profiles.py",
  "sa_nom_governance/guards/session_manager.py",
]
