[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sa-nom-ai-governance-suite"
version = "0.7.7"
description = "Open-core governance and orchestration toolkit for structured AI operations on private infrastructure."
readme = "README.md"
requires-python = ">=3.14"
license = "AGPL-3.0-only"
authors = [
  { name = "SA-NOM AI", email = "sanomaiarch@gmail.com" },
]
keywords = ["ai-governance", "self-hosted", "audit", "compliance", "workflow-governance"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sanom-ai/sa-nom-ai-governance-suite"
Repository = "https://github.com/sanom-ai/sa-nom-ai-governance-suite"
Documentation = "https://github.com/sanom-ai/sa-nom-ai-governance-suite/tree/main/docs"
Releases = "https://github.com/sanom-ai/sa-nom-ai-governance-suite/releases"
Issues = "https://github.com/sanom-ai/sa-nom-ai-governance-suite/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.11.0",
  "mypy>=1.19.0",
  "pre-commit>=4.0.0",
]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.package-data]
sa_nom_governance = [
  "_bundled_resources/alignment/*.json",
  "_bundled_resources/config/*.json",
  "_bundled_resources/pt_oss/*.json",
  "_bundled_resources/roles/*.ptn",
  "_bundled_resources/studio/*.json",
]

[tool.setuptools.packages.find]
include = ["sa_nom_governance", "sa_nom_governance.*"]

[tool.pytest.ini_options]
testpaths = ["_support/tests"]
addopts = "--cov=sa_nom_governance --cov-report=term-missing --cov-report=xml --cov-fail-under=75"

[tool.ruff]
line-length = 120
target-version = "py314"
extend-exclude = [
  "_runtime",
  "_review",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.14"
follow_imports = "silent"
strict = true
check_untyped_defs = true
warn_unused_ignores = true
files = [
  "sa_nom_governance/guards/bootstrap_access_profiles.py",
  "sa_nom_governance/guards/session_manager.py",
  "sa_nom_governance/core/authority_policy_engine.py",
  "sa_nom_governance/core/policy_runtime_contracts.py",
  "sa_nom_governance/core/dispatcher.py",
  "sa_nom_governance/core/execution_context.py",
  "sa_nom_governance/core/result_builder.py",
  "sa_nom_governance/core/risk_scorer.py",
  "sa_nom_governance/core/decision_engine.py",
  "sa_nom_governance/core/request_consistency.py",
]


